--- a/backend/app/templates/home.html
+++ b/backend/app/templates/home.html
@@ -13,7 +13,7 @@
         </div>
     {% else %}
         <div class="d-flex flex-column flex-md-row gap-3">
-            <a href="{{ url_for('profiles.get_profile') }}" class="btn btn-success btn-lg">👤 My Profile</a>
+            <a href="{{ url_for('profiles.get_profile') }}" class="btn btn-custom-profile btn-lg">👤 My Profile</a>
             <a href="{{ url_for('auth.logout') }}" class="btn btn-danger btn-lg">🚪 Logout</a>
         </div>
     {% endif %}
